--- a/gog.org
+++ b/gog.org
@@ -40,7 +40,7 @@ The enormous irregular mound of red rock in which the Zog clan lived was at this
 
 The same family, all marriage and blood relations, all the way back to the times of Grut[fn:: The great], has continuously occupied the inside of this hill, which was given the name Bhorv Zolk by some anonymous caveman long ago. The name now has as much meaning to them as it does to you.
 
-A hollowed out rock 167 men tall can be a cozy kind of place. The soot above the openings were in this case considered "quaint", and it gave a place for the grandkids to scratch in their names and draw rock-sticks, with a hasty, pleasurable guilt, followed by a rapid retreat. The soot stains above the opening to the parlor were an especially large, especially shameful bit of soot-pallet. Grandsons Darcc and Dragg were currently hard at work with rhino soap and a basket of pine cones for scrubbing. Sometimes it's a matter of who gets caught, but sometimes the club of justice falls true.
+A hollowed out rock 167 men tall can be a cozy kind of place. The soot above the openings were in this case considered "quaint", and it gave a place for the grandkids to scratch in their names and draw rock-sticks, with a hasty, pleasurable guilt, followed by a rapid retreat. The soot stains above the opening to the parlor were an especially large, especially shameful bit of soot-palette. Grandsons Darcc and Dragg were currently hard at work with rhino soap and a basket of pine cones for scrubbing. Sometimes it's a matter of who gets caught, but sometimes the club of justice falls true.
 
 Fires make for a cozy cave, and the grand matriarch Nud, Zog's seventh and it would turn out final wife, was the artful, watchful, and opinionated keeper of the fires. Usually this /would/ have meant schlepping wood every late evening to the point of exhaustion, and only after this is done would the cleaning, arranging and lighting take place. No longer! Nud was more the managerial type.
 
@@ -1270,7 +1270,7 @@ I switched from protecting my eyes to protecting my groin as fast as I was able,
 
 At length I was too exhausted to keep up and upon my surrendering, she took up /all/ of my parts and then some, squeezed with her mighty beak and pulled. Of course she had flipped me over by this point and was putting new holes in my front half.
 
-For her all this was truly was effortless. The shock and horror I was experiencing at the moment was a kind of protection for me. I don't know how the reflect-soul works, but I can recall no pain at all.
+For her all this was truly effortless. The shock and horror I was experiencing at the moment was a kind of protection for me. I don't know how the reflect-soul works, but I can recall no pain at all.
 
 I just remember how effortlessly she tore off what to me was the most important part of my body at the time. It was like the meat had been scored deeply in advance. It just came right off and went down her throat; her making a whole-body bob as she tossed it down her own throat.
 
@@ -1285,7 +1285,7 @@ Thag took some time in relishing another of his popular theatrics. He raised his
 
 He completed his circle and made another famous Caveman Thag smile.
 
-Those in the first few rows could see tears coming from the outside of one of his empty eye sockets, the only bit of tear duct-work to survive intact. The dripping had little correlation with Thad's mood. No one including himself knew they why or when of his tears.
+Those in the first few rows could see tears coming from the outside of one of his empty eye sockets, the only bit of tear duct-work to survive intact. The dripping had little correlation with Thad's mood. No one including himself knew the why or when of his tears.
 
 Some children giggled. With a swing of his arm Thag made a vague grabbing motion with his finger parts in the sound's direction; a sort of friendly and oddly raptor-like wave, to a perfectly normal child from a disfigured, ancient man.
 
@@ -1963,7 +1963,7 @@ Be careful not to over-think the meaning, but it should be apparent from context
 - Small Woods :: The more woodsy part of the trek from Bhorv Zolk, just before reaching Snare Plains. The transition is rather sudden: One goes from shady canopy to open sky in only a few steps. The boundary looks like a green, tumbling ocean meeting a dusty, scrubby continent, with the overhanging trees looking like frozen waves about to crash.
 - snake-meal :: A "bump", "lump", "protuberance", "hump", or area of fattening. Also used in the way we say, "love handles".
 - Snare Plains :: The plains/savanna met just before Fayt-Caves when traveling from Bhorv Zolk.
-- soot-pallet :: Wherever fire has deposited soot on an area of stone that has been used for writing, if you write in it, it becomes a "soot-pallet". It's as common as and thought of like billboards, but are not thought of as owned, so it's acceptable for someone to write something (proper) on such a sooted stone surface. Trespassing is still a thing, though.
+- soot-palette :: Wherever fire has deposited soot on an area of stone that has been used for writing, if you write in it, it becomes a "soot-palette". It's as common as and thought of like billboards, but are not thought of as owned, so it's acceptable for someone to write something (proper) on such a sooted stone surface. Trespassing is still a thing, though.
 - squirrel-hoard :: An abstract quantity meaning "a lot", if you thought "a whole bunch of" you'd be close.
 - strength :: "Force", in the way used in physics.
 - take-part-value :: A tax.
@@ -1991,7 +1991,7 @@ Picture yourself facing East (morning-sun) and pointing in the direction that fo
 ** Language and Naming Surrounding Women
   Promised but not yet delivered.
 ** Abundance of Human Predators and Other Dangers
-  Someone needs to explain why folks would not just simply off themselves if found in a world where fecking gigantic cats and goat-sized flying predictors are watching you /every now and then/. I mean, it'd be pretty terrifying, no? But the abundance of predictors and the seemingly impossibly non-stop live-or-die struggles with this and other annoyances would be a real bummer (they were).
+  Someone needs to explain why folks would not just simply off themselves if found in a world where fecking gigantic cats and goat-sized flying predators are watching you /every now and then/. I mean, it'd be pretty terrifying, no? But the abundance of predictors and the seemingly impossibly non-stop live-or-die struggles with this and other annoyances would be a real bummer (they were).
 
 Explain yourself!
 
@@ -2048,7 +2048,7 @@ In fact, the Crec quite literally are thinking "a part of a circle", the way to 
 
 *** Time
 
-- [sun-]palm: About 38 minutes. The amount of time it takes for the sun to pass the width of one palm at arm's length. For example, if you want to know what-in-the-morning it is, hold your right arm out straight, rotate your upturned hand counter clockwise 90 degrees so that your fingers are pointing to your left, the distance from top of your hand (the outer [upper-most] part of the first knuckle of the pinkie) to the bottom of your hand (the outer [lower-most] part of the first knuckle of your index finger) is the unit you use to measure the height of the son. A Crec will say, "It's 7 palm after dawn, get a move on!"
+- [sun-]palm: About 38 minutes. The amount of time it takes for the sun to pass the width of one palm at arm's length. For example, if you want to know what-in-the-morning it is, hold your right arm out straight, rotate your upturned hand counter clockwise 90 degrees so that your fingers are pointing to your left, the distance from top of your hand (the outer [upper-most] part of the first knuckle of the pinkie) to the bottom of your hand (the outer [lower-most] part of the first knuckle of your index finger) is the unit you use to measure the height of the sun. A Crec will say, "It's 7 palm after dawn, get a move on!"
 - drop-stone: Just over 0.5s [a 5ft drop in a vacuum with standard gravity is 0.5575s]
 - moon: (lunar) month [around 29.5 days]
 - sun: day
