--- a/gog.org
+++ b/gog.org
@@ -1380,7 +1380,7 @@ He made the eyes-widening, brow-rising, cock to the head "/well?!/" expression t
 
 "He seems to be 'asking' us.", said Gog.
 
-"Yes.", agreed Gog. Then after a pause, "What is he asking us?"
+"Yes.", agreed Grav. Then after a pause, "What is he asking us?"
 
 The forest-child made a mock jog in the direction he had been heading and then again, "/Well?/"
 
@@ -1632,7 +1632,7 @@ He turned to the men and made a "Hummmphf!" that conveyed annoyance more than re
 
 # do we want/need some kind of separator here. It's a new day...
 
-The next morning had the unfortunate bleary, "all too real" feeling of a night having been overdone as if reality did in fact have an anchor and this is what finding a new anchorage felt like.
+The next morning had the unfortunate bleary, "all too real" feeling of a night having been overdone, as though reality did in fact have an anchor and this is what finding new anchorage felt like.
 
 The unmistakable scent of barbecued game wafted in the air outside. It had the /smell/ of an epic last-night.
 
@@ -1957,7 +1957,7 @@ Be careful not to over-think the meaning, but it should be apparent from context
 - rhino-calf :: It means literally that but is also a term of endearment that you can still say without being too creepy. Like "dear".
 - rhino-scat :: Mostly known as being the name of a certain hill that was central to the events of The Battle of the Snake Meal during The Great Club War. Actual rhino scat has a certain look. The famous hill has that same look.
 - rock-stick :: Referring to the cavemen sex organs, it has a slightly less "rude" sense than do other profanities. It's equivalent to the modern (circa 2021) English "weener" or "peener" or "willy" or "pee-pee" or "jiggly bits" or "hookie" or "wee-wee" or "peter".
-- several-finger :: A quantity of something. It is exactly 10. The number of fingers you have. Like "dozen" but two less.
+- all-finger :: A quantity of something. It is exactly 10; the number of fingers you have. Like "dozen" but two less.
 - sit-ham-stone :: Chair
 - sit-ham :: Butt-cheek
 - Small Woods :: The more woodsy part of the trek from Bhorv Zolk, just before reaching Snare Plains. The transition is rather sudden: One goes from shady canopy to open sky in only a few steps. The boundary looks like a green, tumbling ocean meeting a dusty, scrubby continent, with the overhanging trees looking like frozen waves about to crash.
