--- a/gog.org
+++ b/gog.org
@@ -1368,7 +1368,7 @@ Thag made his most enthusiastic wave goodbye. His one arm being a disproportiona
 \clearpage
 * Getting to Know Baby
 
-Grav and Gog were faced with spending the night, baring a miracle, in the most dangerous place possible, only because a much greater danger had recently moved into the area, like bad weather, but worse.
+Grav and Gog were faced with spending the night, baring a miracle, in the most dangerous place possible, only because a much greater danger had recently moved into the area like bad weather, but worse.
 
 This was part of the life-long education the men had about lizard-birds.  The woods were safer but not safe. It also was the only reasonable choice with a lizard-bird in the area, most of all at night.
 
@@ -1392,7 +1392,7 @@ In the growth strata of most jungle or woods, there was a fairly consistently un
 
 There were juicy, mostly edible or at least useful ferns and broad-leafed weeds up to about a pinkie-thumb from the floor. The next-tallest "layer" was probably about nipple height for an adult Crec.
 
-But a /baby/ could trek along unbothered by anything other than what for /him/ would be light knee-high, dewy, soft green leaves, with the next layer of green being, again for him, one or two heads above. This is a good thing as this was also the first strata featuring wide use of spines and poisons.
+But a /baby/ could trek along unbothered by anything other than what for /him/ would be light knee-high, dewy, soft green leaves, with the next layer of green being, again for him, one or two heads above. This is a good thing as this was also the first strata featuring wide use of sharp spines and poison.
 
 For the men, this meant a walk through thick, chest-high bush that was all painful or uncomfortable in some way or other. In addition to the irritable plant life, not a few cantankerously deadly fauna lived in this layer too. This was the whole reason for established paths after all!
 
