--- a/gog.org
+++ b/gog.org
@@ -1394,7 +1394,7 @@ There were juicy, mostly edible or at least useful ferns and broad-leafed weeds 
 
 But a /baby/ could trek along unbothered by anything other than what for /him/ would be light knee-high, dewy, soft green leaves, with the next layer of green being, again for him, one or two heads above. This is a good thing as this was also the first strata featuring wide use of sharp spines and poison.
 
-For the men, this meant a walk through thick, chest-high bush that was all painful or uncomfortable in some way or other. In addition to the irritable plant life, not a few cantankerously deadly fauna lived in this layer too. This was the whole reason for established paths after all!
+For the men, this meant a walk through thick, chest-high bush that all seemed to be painful in some way or other. In addition to the irritable plant life, not a few cantankerously deadly fauna lived in this layer too. This was the whole reason for established paths after all!
 
 A Crec ecology textbook could easily have used a picture of this bit of woods to illustrate these concepts.
 
