--- a/gog.org
+++ b/gog.org
@@ -1426,15 +1426,15 @@ They had surely traveled four palm off the established trail to get here and it 
 
 It was an astonishing structure, mostly in the seemingly wasted time that must have gone into making it so /perfect/.
 
-As the front of the hide came into view, they could see that some rather sophisticated modern construction had been done too: There was a sort of wood entrance-way constructed around the opening. The stone was clearly many rotting-ages[fn:: A 'rotting-age' is reckoned to be the time required for a fallen tree to rot completely back into soil. The Crec knew this was an imprecise unit of time. Part of the point was: It's such a long time, that one needn't nit-pick about whether the tree was "fully rotted" by this point or the other. We might say 'eons'.] old. The wood was comparatively new.
+As the front of the hide came into view, they could see that some rather sophisticated modern construction had been done too: There was a sort of wood entrance-way constructed around the opening. The stone was clearly many rotting-ages[fn:: A 'rotting-age' is reckoned to be the time required for a fallen tree to rot completely back into soil. The Crec knew this was an imprecise unit of time. Part of the point was: It's such a long time that one needn't nit-pick about whether the tree was "fully rotted" by this point or the other. We might say 'eons'.] old. The wood was comparatively new.
 
 It was not a particularly inviting entrance. This structure was solely for the purpose of protecting the occupants.
 
-There was a low, two man long sort of arched hallway made from woven and somewhat living vine. The walls of this tunnel were lined with dozens of sharpened, springy saplings all anchored at their base to the wall, hanging at lazy angles near the wall and all pointing outward.
+This was a low, two man long sort of arched hallway made from woven and somewhat living vine. The walls of this tunnel were lined with dozens of sharpened, springy saplings all anchored at their base to the wall, hanging at lazy angles near the wall and all pointing outward.
 
 This is a contrivance that the men were familiar with. Something like this was used sometimes to protect the opening of a cave from anything big enough to be a threat to humans.
 
-Looking inward, one's eyes were met by the tips of many, usually all-finger all-finger or more fire-hardened points made from fist-diameter, half-man long saplings chosen for their stiffness, making entrance impossible for a crazed predator but still allowing a human to enter, patiently move spikes out of the way, using arms and legs to retain the ones already past, going slow and patiently. A human could get in with some strategy and patience. Nothing dumber could make it through, generally.
+Looking inward one's eyes were met by the tips of many, usually all-finger all-finger or more fire-hardened points made from fist-diameter, half-man long saplings chosen for their stiffness, making entrance impossible for a crazed predator but still allowing a human to enter, patiently move spikes out of the way, using arms and legs to retain the ones already past, going slow and patiently. A human could get in with some strategy and patience. Nothing dumber could make it through, generally.
 
 This was referred to in standard Crecspeak as a spear-guard. It was known to Grav and Gog as a "porcupine-pussy"[fn:: They thought this much more descriptive and poetic.].
 
@@ -1446,7 +1446,7 @@ This was a hide that the forest-child somehow knew about in advance. The plains 
 
 One might ask, "Hey, why not build the hide on the plains where it's safer?" This is because 1. Both the Crec and the forest-children would be hopeless at building something particularly /like/ this, 2. The plains aren't exactly a safe place to bivouac, unless far away from any patch of woodsy Forest, and then only with some strict protocols, and never alone, and 3. Once on the ground, fending off a lizard-bird trying to get into the hide would be no different from the things they would encounter in the woods, and odds were good the lizard-bird would find them, even in a stone hide.
 
-And the hide was a perfect solution. They would likely just enjoy a night of periodic but contained terror as they get sniffed out and then mercilessly charged by an animal that gets bloodier and angrier with every failure. All three having spears, they might even possibly enjoy the pleasure of mortally wounding a tooth-cat with a satisfying stab down its throat[fn:: Tooth-cats were /hated/ among the Crec. Tooth-cats were for them what wolves are for modern sheep farming settlers. There was a mindless hatred. They would see no downside to all-out extinction. Every Crec was at most two or three relations away from someone who had been killed and eaten by a tooth-cat.].
+And this particular hide was a perfect solution to their predicament. They would likely just enjoy a night of periodic but contained terror as they get sniffed out and then mercilessly charged by an animal that gets bloodier and angrier with every failure. All three having spears, they might even possibly enjoy the pleasure of mortally wounding a tooth-cat with a satisfying stab down its throat[fn:: Tooth-cats were /hated/ among the Crec. Tooth-cats were for them what wolves are for modern sheep farming settlers. There was a mindless hatred. They would see no downside to all-out extinction. Every Crec was at most two or three relations away from someone who had been killed and eaten by a tooth-cat.].
 
 For them, it would be a kind of entertainment.
 
