--- a/gog.org
+++ b/gog.org
@@ -1446,7 +1446,7 @@ This was a hide that the forest-child somehow knew about in advance. The plains 
 
 One might ask, "Hey, why not build the hide on the plains where it's safer?" This is because 1. Both the Crec and the forest-children would be hopeless at building something particularly /like/ this, 2. The plains aren't exactly a safe place to bivouac, unless far away from any patch of woodsy Forest, and then only with some strict protocols, and never alone, and 3. Once on the ground, fending off a lizard-bird trying to get into the hide would be no different from the things they would encounter in the woods, and odds were good the lizard-bird would find them, even in a stone hide.
 
-And this particular hide was a perfect solution to their predicament. They would likely just enjoy a night of periodic but contained terror as they get sniffed out and then mercilessly charged by an animal that gets bloodier and angrier with every failure. All three having spears, they might even possibly enjoy the pleasure of mortally wounding a tooth-cat with a satisfying stab down its throat[fn:: Tooth-cats were /hated/ among the Crec. Tooth-cats were for them what wolves are for modern sheep farming settlers. There was a mindless hatred. They would see no downside to all-out extinction. Every Crec was at most two or three relations away from someone who had been killed and eaten by a tooth-cat.].
+And this particular hide was a perfect solution to their predicament. They would likely just enjoy a night of periodic but contained terror as they get sniffed out and then mercilessly charged by an animal that gets bloodier and angrier with every failed attack. All three having spears, they might even possibly enjoy the pleasure of mortally wounding a tooth-cat with a satisfying stab down its throat[fn:: Tooth-cats were /hated/ among the Crec. Tooth-cats were for them what wolves are for modern sheep farming settlers. There was a mindless hatred. They would see no downside to all-out extinction. Every Crec was at most two or three relations away from someone who had been killed and eaten by a tooth-cat.].
 
 For them, it would be a kind of entertainment.
 
@@ -1462,13 +1462,15 @@ Gog was holding an unfired clay oil lamp with a small, bright, efficient flame a
 
 This was a kind of travel lamp carried in nearly all kits. Though porous, the outside was waterproofed to the degree possible with pine pitch fixed with a packed layer of soot. This gave the outer surface an asphalt kind of finish that was good for the trail. The finish itself was thick enough to provide some impact protection, which is a big concern for the fragile things you drag around the Forest with you always. And to whatever extent the pitch soaked into the lamp, it was only so much more fuel. Old lamps gave off a distinct comforting smell; grandma, warm fires, salad days.
 
-For fuel you could of course use any one of literally thousands of known flammable oils. One's preferred oil usually came down to which unpleasant characteristics could be endured for the price. Oil was pretty expensive. Wherever you got it, the person you obtained it from acquired it in the same way you yourself could have. Your time was worth what his was. So you generally considered the cost of most things, including flame-oils to be about what you'd pay yourself to go out and get some. A lot, in other words. But that value could be obtained in completely different ways: Maybe you're a modern stockbroker. Maybe you mine gems with your bare hands.
+For fuel you could of course use any one of literally thousands of known flammable oils. One's preferred oil usually came down to which unpleasant characteristics could be endured for the price.
+
+Oil was pretty expensive. Wherever you got it, the person you obtained it from acquired it in the same way you yourself could have. Your time was worth what his was. So you generally considered the cost of most things, including flame-oils to be about what you'd pay yourself to go out and get some. A lot, in other words. But that value could be obtained in completely different ways: Maybe you're a modern stockbroker. Maybe you mine gems with your bare hands.
 
 Of course, they had the nicest oil. It also happened to be rather a cheap one as luck would have it. Most considered its smell to be a downside. They thought just the opposite. The lightly refined turpentine[fn:: More or less.] they preferred burned predictably, gave little smoke, had a bright, well-colored flame, and smelled to them like an exhausting day productively working with lumber. It was a nice, crafty kind of smell.
 
 The worst part of the night, they were sure, was going to be sharing a small burrow with a reeking baby who also happened to be a very poor conversationalist.
 
-In the cheerful glow[fn:: For that is what it was.] of the lamp, the two men scanned the walls for anything bit-y. There was an especially hideous land-crab[fn:: Crec knew plenty about crabs. They were 'exotic' this far away from any source, but they knew well the body plan, the innards, and the delightful /taste/ of crab. The shells were always kept around for some user or other. All you needed was a rich uncle willing to let you sift through his garbage. Somewhere far back in the Crecspeak family tree, someone noticed that this spider, the variety they shared the hide with, looked very much like a crab, had a lot of the same kinds of spines, made a similar clicking when crawling along rock, and provided an almost identical eating experience to their "delicacy" cousins. They were more plentiful but tasted distinctly worse than actual crab, so it was more "just a name" except to the very hungry. And they were harmless. Huge, but harmless. And also slow and shy until startled.] and a few millipedes that one would not want to touch[fn:: Nothing capable of spraying or snipping off a finger.].
+In the cheerful glow[fn:: For that is what it was.] of the lamp, the two men scanned the walls for anything bit-y. There was an especially hideous land-crab[fn:: Crec knew plenty about crabs. They were 'exotic' this far away from any source, but they knew well the body plan, the innards, and the delightful /taste/ of crab. The shells were always kept around for some user or other. For most crab shell was acquired via a well-off relation who was willing to let you sift through their garbage. Somewhere far back in the Crecspeak family tree, someone noticed that this spider, the variety they shared the hide with, looked very much like a crab, had a lot of the same kinds of spines, made a similar clicking when crawling along rock, and flavor not withstanding provided an almost identical eating experience to their "delicacy" cousins. They were more plentiful but tasted distinctly worse than actual crab, so it was more "just a name" except to the very hungry. And they were harmless. Huge, but harmless. And also slow and shy until startled.] and a few millipedes that one would not want to touch[fn:: Nothing capable of spraying or snipping off a finger.].
 
 And right in the middle was a pile of burnt bones and cold coals. This was as expected. Though out of the way, this completely sheltered hide would surely have occasional visitors such as themselves, and it was apparently known to the forest-children.
 
