--- a/gog.org
+++ b/gog.org
@@ -1470,9 +1470,9 @@ Of course, they had the nicest oil. It also happened to be rather a cheap one as
 
 The worst part of the night, they were sure, was going to be sharing a small burrow with a reeking baby who also happened to be a very poor conversationalist.
 
-In the cheerful glow[fn:: For that is what it was.] of the lamp, the two men scanned the walls for anything bit-y. There was an especially hideous land-crab[fn:: Crec knew plenty about crabs. They were 'exotic' this far away from any source, but they knew well the body plan, the innards, and the delightful /taste/ of crab. The shells were always kept around for some user or other. For most crab shell was acquired via a well-off relation who was willing to let you sift through their garbage. Somewhere far back in the Crecspeak family tree, someone noticed that this spider, the variety they shared the hide with, looked very much like a crab, had a lot of the same kinds of spines, made a similar clicking when crawling along rock, and flavor not withstanding provided an almost identical eating experience to their "delicacy" cousins. They were more plentiful but tasted distinctly worse than actual crab, so it was more "just a name" except to the very hungry. And they were harmless. Huge, but harmless. And also slow and shy until startled.] and a few millipedes that one would not want to touch[fn:: Nothing capable of spraying or snipping off a finger.].
+In the cheerful glow[fn:: For that is what it was.] of the lamp, the two men scanned the walls for anything bit-y. There was an especially hideous land-crab[fn:: Crec knew plenty about crabs. They were 'exotic' this far away from any source, but they knew well the body plan, the innards, and the delightful /taste/ of crab. The shells were always kept around for some user or other. For most crab shell was acquired via a well-off relation who was willing to let you sift through their garbage. Somewhere far back in the Crecspeak family tree, someone noticed that this spider, the variety they shared the hide with, looked very much like a crab, had a lot of the same kinds of spines, made a similar clicking when crawling along rock, and flavor not withstanding provided an almost identical eating experience to their "delicacy" cousins. They were more plentiful but tasted distinctly worse than actual crab, so it was more "just a name" except to the very hungry. And they were harmless. Huge, but harmless. And also slow and shy until startled.] and a few centipede that one would not want to touch[fn:: Nothing capable of spraying or snipping off a finger.].
 
-And right in the middle was a pile of burnt bones and cold coals. This was as expected. Though out of the way, this completely sheltered hide would surely have occasional visitors such as themselves, and it was apparently known to the forest-children.
+And right in the middle was a pile of burnt bones and cold coals. This was as expected. Though out of the way, this completely sheltered hide would surely have occasional visitors such as themselves and it was apparently known to the forest-children.
 
 Having gotten snugly into their hide-burrow and it now being properly dark, as best they could tell in the dark wood, Grav and Gog talked at length about their predicament and plans.
 
@@ -1480,9 +1480,9 @@ For one, they would have to awake and get running dangerously early to beat conc
 
 Missing conch would mean first getting all-finger lashes, then attending CO lectures regarding obedience, duty, and pain, and then finally performing all training exercises that had been scheduled for them that day alone and unsupervised[fn:: The penalty for any kind of shirking was death, so supervision was generally was not required.] likely until palm past the usual first-night bedtime. This of course resulted in occasional deaths, so it was a kind of 'death penalty lite'.
 
-The last palm of woods would not be entirely quiet at that time, there being early-risers among predators too. They were balancing the various penalties they were facing with their reckoned odds of getting eaten by one thing or another along the way.
+The last palm of woods would not be entirely quiet even after dawn, there often being predators putting in long nights. They were balancing the various penalties they were facing with their reckoned odds of getting eaten by one thing or another along the way.
 
-It was not unusual for a lizard-bird to continue its hunt until early morning, even after dawn. The men did have clear skies and a sliver of morning-moon in their favor.
+It was not unusual for a lizard-bird to continue its hunt until daylight. The men did have clear skies and a sliver of morning-moon in their favor.
 
 /Play it by ear; we're safe for now/ was the unspoken conclusion. There was nothing tangible they could do about any of it at this point.
 
@@ -1490,7 +1490,7 @@ Grav and Gog's attention went back to the forest-baby.
 
 They had determined as best they could that his name was Oh-Mas, although Grav wondered if /one's name/ meant the same thing to the baby as it did to them.
 
-He had an idea that, /yes/, they had names, /of a sort/, but /it was complicated/. Just as the instincts that forest-children have about language, in general, could be leveraged to get their attention, similarly did Oh-Mas' constant chattering give the impression that there was 'a lot going on there'.
+He had an idea that, /yes/, they had names /of a sort/ but /it was complicated/. Just as the instincts that forest-children have about language, in general, could be leveraged to get their attention, similarly did Oh-Mas' constant chattering give the impression that there was 'a lot going on there'.
 
 Oh-Mas too was working with fire.
 
