--- a/gog.org
+++ b/gog.org
@@ -1490,7 +1490,7 @@ Grav and Gog's attention went back to the forest-baby.
 
 They had determined as best they could that his name was Oh-Mas, although Grav wondered if /one's name/ meant the same thing to the baby as it did to them.
 
-He had an idea that, /yes/, they had names /of a sort/ but /it was complicated/. Just as the instincts that forest-children have about language, in general, could be leveraged to get their attention, similarly did Oh-Mas' constant chattering give the impression that there was 'a lot going on there'.
+He had an idea that /yes/, they had names /of a sort/ but /it was complicated/. Just as the instincts that forest-children have about language, in general, could be leveraged to get their attention, similarly did Oh-Mas' constant chattering give the impression that there was 'a lot going on there'.
 
 Oh-Mas too was working with fire.
 
